Ajustes no layout

--- a/src/app/compras/compras.page.html
+++ b/src/app/compras/compras.page.html
@@ -1,9 +1,9 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar class="toolbar">
       <ion-buttons slot="start">
           <ion-back-button></ion-back-button>
       </ion-buttons>
-    <ion-title>Compras</ion-title>
+    <ion-title slot>Compras</ion-title>
   </ion-toolbar>
 </ion-header>
 
