--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,44 @@
+ion-content{
 
+  --ion-background-color :#f4f4f4;
+}
+.welcome-card ion-img {
+    max-height: 35vh;
+    overflow: hidden;
+  }
+  
+  .toolbarHome {
+    background-color: #1c7eb4 !important;
+     // background-image: linear-gradient(to bottom, rgba(255,255,255,.1), rgba(255,255,255,.4) 91%);
+      height: 156px;
+  }
+  
+  .ioncard{
+    background-color: white;
+    border: solid 1px #1c7eb4;
+  }
+  
+  .ioncardIcon{
+    font-size: 30px;
+    color: #1c7eb4 !important;
+  }
+  
+  .ionGridHome{
+    background-color:  #f3f4f6;
+  }
+  
+  .ionTitleHome{
+    //color: var(--ion-color-step-550,#737373);
+    font-size: 15px;
+    color: #1c7eb4 !important;
+  }
+  
+  .imgLogo{
+    height: 95px;width: 355px;
+  }
+
+  .titleHome{
+    color: white;
+    font-size: 35px;
+  }
+ 
