--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -2,7 +2,7 @@
 <ion-content style="background-color: #f3f4f6;">
 
   <ion-toolbar >
-    <div class="toolbarHome">
+    <div class="toolbarHome" >
         <br/>
         <ion-grid >
             <ion-row>
@@ -10,10 +10,10 @@
                    
                 </ion-col>
                 <ion-col>
-                   <!-- <ion-img class="imgLogo" src="/assets/logo.png" ></ion-img>-->
-                   <ion-title class="titleHome" >
+                    <ion-img class="imgLogo" src="/assets/logo.png" ></ion-img>
+                   <!--<ion-title class="titleHome" >
                       Anota Aí
-                   </ion-title>
+                   </ion-title>-->
                 </ion-col>
                 <ion-col>
                    
