Ajustes no layout

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,28 +1,28 @@
 
+ <ion-header>
+        <ion-toolbar >
+          <div class="toolbarHome" >
+              <br/>
+              <ion-grid >
+                  <ion-row>
+                      <ion-col>
+                         
+                      </ion-col>
+                      <ion-col>
+                          <ion-img  src="/assets/logo.png" ></ion-img>
+                         <!--<ion-title class="titleHome" >
+                            Anota Aí
+                         </ion-title>-->
+                      </ion-col>
+                      <ion-col>
+                         
+                      </ion-col>
+                  </ion-row>
+              </ion-grid>    
+          </div>
+        </ion-toolbar>
+      </ion-header>
 <ion-content style="background-color: #f3f4f6;">
-
-  <ion-toolbar >
-    <div class="toolbarHome" >
-        <br/>
-        <ion-grid >
-            <ion-row>
-                <ion-col>
-                   
-                </ion-col>
-                <ion-col>
-                    <ion-img class="imgLogo" src="/assets/logo.png" ></ion-img>
-                   <!--<ion-title class="titleHome" >
-                      Anota Aí
-                   </ion-title>-->
-                </ion-col>
-                <ion-col>
-                   
-                </ion-col>
-            </ion-row>
-        </ion-grid>    
-    </div>
-
-  </ion-toolbar>
   <ion-grid >
         
       <ion-row>
