--- a/src/app/produto/listagem/listagem.page.html
+++ b/src/app/produto/listagem/listagem.page.html
@@ -8,5 +8,20 @@
 </ion-header>
 
 <ion-content>
+    <ion-row>
+        <ion-col>
+          <ion-card class="ioncard"  (click)="detalheProduto('/produto/cadastro')"  >
+            <ion-card-header>
+               <ion-icon name="Teste" color="success" class="ioncardIcon"></ion-icon>
+              <ion-card-subtitle>teste</ion-card-subtitle>
+            </ion-card-header>
+          
+            <ion-card-content>
+             
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+        
+    </ion-row>
 
 </ion-content>
