--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -10,7 +10,7 @@ ion-content{
   .toolbarHome {
     background-color: #1c7eb4 !important;
      // background-image: linear-gradient(to bottom, rgba(255,255,255,.1), rgba(255,255,255,.4) 91%);
-      height: 156px;
+     // height: 136px;
   }
   
   .ioncard{
