--- a/src/app/lista/listagem/listagem.page.html
+++ b/src/app/lista/listagem/listagem.page.html
@@ -8,5 +8,15 @@
 </ion-header>
 
 <ion-content>
-
+  <!-- List of Text Items -->
+  <ion-list *ngFor="let item of lista">
+    <ion-item (click)="listaDetalhe('/lista/cadastro')" >
+   
+     <!-- <ion-img  src="'{{item.img}}'" ></ion-img>-->
+     <ion-icon name="paper"  class="ioncardIcon"></ion-icon>
+  
+      <ion-label style="margin-left: 20px;">{{item.name}}</ion-label>
+    </ion-item>
+  
+  </ion-list>
 </ion-content>
