--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,8 +8,8 @@
                       <ion-col>
                          
                       </ion-col>
-                      <ion-col>
-                          <ion-img  src="/assets/logo.png" ></ion-img>
+                      <ion-col>   
+                          <ion-img style="margin-top: 10px" src="/assets/logo.png" ></ion-img>
                          <!--<ion-title class="titleHome" >
                             Anota Aí
                          </ion-title>-->
