--- a/src/app/lista/listagem/listagem.page.html
+++ b/src/app/lista/listagem/listagem.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar class="toolbar">
+  <ion-toolbar color="primary">
       <ion-buttons slot="start">
           <ion-back-button></ion-back-button>
       </ion-buttons>
@@ -19,4 +19,10 @@
     </ion-item>
   
   </ion-list>
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+      <ion-fab-button color="primary">
+        <ion-icon name="add"></ion-icon>
+      </ion-fab-button>
+  </ion-fab>
 </ion-content>
