crud de produtos

--- a/src/app/produto/cadastro/cadastro.page.html
+++ b/src/app/produto/cadastro/cadastro.page.html
@@ -34,13 +34,13 @@
         <ion-grid>
             <ion-row>
                 <ion-col>
-                    <ion-button expand="block" (click)="salvar()">
+                    <ion-button expand="block"  type="submit" >
                         <ion-icon name="checkmark"></ion-icon>
                         Salvar
                       </ion-button>
                 </ion-col>
                 <ion-col>
-                    <ion-button expand="block" color="danger" type="submit">
+                    <ion-button expand="block" color="danger" (click)="excluir()">
                         <ion-icon name="trash"></ion-icon>
                       Excluir
                     </ion-button>
