crud de produtos

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,25 +1,12 @@
 
  <ion-header>
-        <ion-toolbar >
-          <div class="toolbarHome" >
-              <br/>
-              <ion-grid >
-                  <ion-row>
-                      <ion-col>
-                         
-                      </ion-col>
-                      <ion-col>   
-                          <ion-img style="margin-top: 10px" src="/assets/logo.png" ></ion-img>
-                         <!--<ion-title class="titleHome" >
-                            Anota Aí 
-                         </ion-title>-->
-                      </ion-col>
-                      <ion-col>
-                         
-                      </ion-col>
-                  </ion-row>
-              </ion-grid>    
-          </div>
+        <ion-toolbar color="primary">
+               <ion-title slot="start" style="color: white;font-weight: bold;">Anota Aí</ion-title>
+               
+              <ion-avatar slot="end">
+                  <ion-img style="height: 63%;margin-top: 12px; margin-left: -10px;" src="/assets/logo.png" ></ion-img>
+               </ion-avatar>
+            
         </ion-toolbar>
       </ion-header>
 <ion-content style="background-color: #f3f4f6;">
