--- a/src/app/lista/listagem/listagem.page.html
+++ b/src/app/lista/listagem/listagem.page.html
@@ -20,7 +20,7 @@
   
   </ion-list>
 
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="redirectPage()" >
       <ion-fab-button color="primary">
         <ion-icon name="add"></ion-icon>
       </ion-fab-button>
