--- a/src/app/lista/listagem/listagem.page.html
+++ b/src/app/lista/listagem/listagem.page.html
@@ -10,12 +10,12 @@
 <ion-content>
   <!-- List of Text Items -->
   <ion-list *ngFor="let item of lista">
-    <ion-item (click)="listaDetalhe('/lista/cadastro')" >
+    <ion-item  [routerLink]="['/lista/cadastro', item.id]">
    
      <!-- <ion-img  src="'{{item.img}}'" ></ion-img>-->
      <ion-icon name="paper"  class="ioncardIcon"></ion-icon>
   
-      <ion-label style="margin-left: 20px;">{{item.name}}</ion-label>
+      <ion-label style="margin-left: 20px;" >{{item.name}}</ion-label>
     </ion-item>
   
   </ion-list>
