--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -13,12 +13,12 @@ ion-content{
   
   .ioncard{
     background-color: white;
-    border: solid 1px #1c7eb4;
+    border: solid 1px #18733c;
   }
   
   .ioncardIcon{
     font-size: 30px;
-    color: #1c7eb4 !important;
+    color: #18733c !important;
   }
   
   .ionGridHome{
