--- a/src/app/categoria/cadastro/cadastro.page.html
+++ b/src/app/categoria/cadastro/cadastro.page.html
@@ -1,6 +1,6 @@
 <ion-header>
 
-    <ion-toolbar color="primary">
+    <ion-toolbar color="success">
         <ion-buttons slot="start">
             <ion-back-button></ion-back-button>
         </ion-buttons>
@@ -12,7 +12,7 @@
 <ion-content>
 <br/>
 <ion-item>
-    <ion-label color="primary" position="fixed">Nome</ion-label>
+    <ion-label  position="fixed">Nome</ion-label>
     <ion-input [(ngModel)]="categoria.name" placeholder="nome da categoria"></ion-input>
 </ion-item>
 <br/>
@@ -20,7 +20,7 @@
 <ion-grid>
     <ion-row>
         <ion-col>
-            <ion-button expand="block" (click)="salvar()">
+            <ion-button color="success" expand="block" (click)="salvar()">
                 <ion-icon name="checkmark"></ion-icon>
                 Salvar
               </ion-button>
