--- a/src/app/categoria/listagem/listagem.page.html
+++ b/src/app/categoria/listagem/listagem.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-    <ion-toolbar color="primary">
+    <ion-toolbar color="success">
         <ion-buttons slot="start">
             <ion-back-button></ion-back-button>
         </ion-buttons>
@@ -18,7 +18,7 @@
   </ion-list>
 
     <ion-fab vertical="bottom" horizontal="end" slot="fixed"   (click)="redirectPage()"  >
-        <ion-fab-button color="primary">
+        <ion-fab-button color="success">
           <ion-icon name="add"></ion-icon>
         </ion-fab-button>
     </ion-fab>
