--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 
  <ion-header>
-        <ion-toolbar color="primary">
+        <ion-toolbar color="success">
                <ion-title slot="start" style="color: white;font-weight: bold;">Anota Aí</ion-title>
                
               <ion-avatar slot="end">
@@ -14,19 +14,17 @@
         
       <ion-row>
           <ion-col>
-              <ion-title class="ionTitleHome" >Hoje {{dataAtual}}</ion-title>
+              <ion-label color="success"  style="font-weight: bold;font-size: 15px" >Hoje {{dataAtual}}</ion-label>
           </ion-col>
       </ion-row>
     
       <ion-row>
           <ion-col>
-              <ion-title class="ionTitleHome" >O que deseja fazer?</ion-title>
+              <ion-label color="success" style="font-weight: bold;font-size: 15px" >O que deseja fazer?</ion-label>
           </ion-col>
       </ion-row>
         
    
-
-
       <ion-row>
           <ion-col *ngFor="let item of menu"  size="6">
             <ion-card class="ioncard"  (click)="redirectPage(item.link)"  >
