--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,12 +4,20 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #1c7eb4;
-  --ion-color-primary-rgb: 56, 128, 255;
+  //--ion-color-primary: #1c7eb4;
+  //--ion-color-primary-rgb: 56, 128, 255;
+  //--ion-color-primary-contrast: #ffffff;
+  //--ion-color-primary-contrast-rgb: 255, 255, 255;
+  //--ion-color-primary-shade: #3171e0;
+  //--ion-color-primary-tint: #4c8dff;
+  --ion-color-primary: #18733c;
+  --ion-color-primary-rgb: 16, 220, 96;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary-shade: #178a43;
+  --ion-color-primary-tint: #178a43;
+
+
 
   /** secondary **/
   --ion-color-secondary: #0cd1e8;
@@ -28,7 +36,7 @@
   --ion-color-tertiary-tint: #7e57ff;
 
   /** success **/
-  --ion-color-success: #10dc60;
+  --ion-color-success: #18733c;
   --ion-color-success-rgb: 16, 220, 96;
   --ion-color-success-contrast: #ffffff;
   --ion-color-success-contrast-rgb: 255, 255, 255;
