--- a/src/app/categoria/cadastro/cadastro.page.html
+++ b/src/app/categoria/cadastro/cadastro.page.html
@@ -20,13 +20,15 @@
 <ion-grid>
     <ion-row>
         <ion-col>
-            <ion-button color="success" expand="block" (click)="salvar()">
+            <ion-button color="success" expand="block" (click)="salvar()"
+            [disabled]="categoria.name==null ">
                 <ion-icon name="checkmark"></ion-icon>
                 Salvar
               </ion-button>
         </ion-col>
         <ion-col>
-            <ion-button expand="block" color="danger" (click)="excluir()">
+            <ion-button expand="block" color="danger" (click)="excluir()"
+            [disabled]="categoria.id==null" >
                 <ion-icon name="trash"></ion-icon>
               Excluir
             </ion-button>
