--- a/src/app/lista/cadastro/cadastro.page.html
+++ b/src/app/lista/cadastro/cadastro.page.html
@@ -61,7 +61,7 @@
                     <ion-label slot="end" color="primary" style="font-weight: bold;font-size: 15px" >{{lista.name}}</ion-label>
                 </ion-col>
                 <ion-col>
-                    <ion-button expand="block"  color="success" [disabled]="lista.id==null && items.length==0" >
+                    <ion-button expand="block"  color="success" [disabled]="lista.id==null && total==0" >
                         <ion-icon name="cart"></ion-icon>
                         Executar
                     </ion-button>
