--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -10,12 +10,12 @@
   //--ion-color-primary-contrast-rgb: 255, 255, 255;
   //--ion-color-primary-shade: #3171e0;
   //--ion-color-primary-tint: #4c8dff;
-  --ion-color-primary: #18733c;
+  --ion-color-primary: #008577;
   --ion-color-primary-rgb: 16, 220, 96;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #178a43;
-  --ion-color-primary-tint: #178a43;
+  --ion-color-primary-shade: #008577;
+  --ion-color-primary-tint: #008577;
 
 
 
@@ -36,12 +36,12 @@
   --ion-color-tertiary-tint: #7e57ff;
 
   /** success **/
-  --ion-color-success: #18733c;
+  --ion-color-success: #008577;
   --ion-color-success-rgb: 16, 220, 96;
   --ion-color-success-contrast: #ffffff;
   --ion-color-success-contrast-rgb: 255, 255, 255;
-  --ion-color-success-shade: #0ec254;
-  --ion-color-success-tint: #28e070;
+  --ion-color-success-shade: #008577;
+  --ion-color-success-tint: #008577;
 
   /** warning **/
   --ion-color-warning: #ffce00;
